# orrey

./: .gitignore  Dockerfile  README.md  TAGS  cabal.project  cabal.project.freeze  exec.sh  orrey  orrey.cabal  package.sh  run.sh  start.sh
.devcontainer/: Dockerfile  devcontainer.json
src/: Main.hs
